--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
